--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ event_label: Events
 description: > # this means to ignore newlines until "baseurl:"
   Simple Jekyll theme to host internal/external events happening in and around your area. Free free to contribute or fork the repo.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/note/" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 
 #These settings might be able to go?
@@ -29,5 +29,5 @@ markdown: kramdown
 #Have to show future posts for future events.
 future: true
 
-permalink: /event/:title.html
+permalink: /note/:title.html
 
