--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ event_label: Events
 description: > # this means to ignore newlines until "baseurl:"
   Simple Jekyll theme to host internal/external events happening in and around your area. Free free to contribute or fork the repo.
 
-baseurl: "/note/" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/note" # the subpath of your site, e.g. /blog
+url: "https://iudd.github.io/note" # the base hostname & protocol for your site
 
 #These settings might be able to go?
 author: David Boyne
